# WDE

./: .gitignore  LICENSE  Makefile  alembic.ini  pyproject.toml  setup.cfg
migrations/: env.py
migrations/versions/: 04f26ab553a6_added_user_and_registration_table.py  6e2e5bea5adc_initial.py  c73fcaab58e2_init_db.py
wdeditor/: cli.py  server.py
wdeditor/models/: models.py
wdeditor/routers/: auth.py  documents.py  templates.py
wdeditor/routers/web/: web.py
wdeditor/schemas/: postgres.py
wdeditor/services/: __init__.py  auth.py  database.py  fileeditor.py
web/: package-lock.json  package.json
web/src/: App.vue  main.js
web/src/components/: Auth.vue  HeaderMenu.vue  MainApp.vue  MainArea.vue  VerticalMenu.vue
web/src/components/auth/: Auth.vue
web/src/stores/: counter.js
