[tool.poetry]
name = "wdeditor"
version = "0.1.0"
description = ""
authors = ["Pavel Milanov <pawel.milanov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
docxtpl = "^0.16.4"
python-multipart = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
